# stripe_v5

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
stripe_old/: __init__.py  api_requestor.py  error.py  http_client.py  multipart_data_generator.py  oauth.py  oauth_error.py  object_classes.py  stripe_object.py  util.py  webhook.py
stripe_old/api_resources/: __init__.py  account.py  account_link.py  apple_pay_domain.py  application_fee.py  application_fee_refund.py  balance.py  balance_transaction.py  bank_account.py  capability.py  card.py  cash_balance.py  charge.py  country_spec.py  coupon.py  credit_note.py  credit_note_line_item.py  customer.py  customer_balance_transaction.py  customer_cash_balance_transaction.py  dispute.py  ephemeral_key.py  error_object.py  event.py  exchange_rate.py  file.py  file_link.py  funding_instructions.py  invoice.py  invoice_item.py  invoice_line_item.py  line_item.py  list_object.py  login_link.py  mandate.py  payment_intent.py  payment_link.py  payment_method.py  payout.py  person.py  (+27 more)
stripe_old/api_resources/abstract/: __init__.py  api_resource.py  createable_api_resource.py  custom_method.py  deletable_api_resource.py  listable_api_resource.py  nested_resource_class_methods.py  searchable_api_resource.py  singleton_api_resource.py  test_helpers.py  updateable_api_resource.py
stripe_old/api_resources/apps/: __init__.py  secret.py
stripe_old/api_resources/billing_portal/: __init__.py  configuration.py  session.py
stripe_old/api_resources/checkout/: __init__.py  (+1 more)
stripe_v5_whl/: stripe-5.0.0-py2.py3-none-any.whl
(+41 files in other folders)
