[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stripe_old"
version = "5.0.0"
description = "Stripe Python bindings (unofficial repackaged)"
authors = [{name = "Stripe", email = "support@stripe.com"}]
requires-python = ">=3.6"
readme = "README.md"
license = {text = "MIT"}
